--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-body{
+body {
     margin: 0;
     padding-top: 800px;
     text-align: center;
 }
 
-.profile{
+.profile {
     border-radius: 50%;
     margin-bottom: 50px;
 }
@@ -12,37 +12,82 @@ body{
 #welcome {
     position: absolute;
     overflow: hidden;
-    height:  800px;
+    height: 800px;
     color: white;
     right: 0;
     left: 0;
-    top:0;
-    bottom:0;
-    background: linear-gradient(#ff0044 0%,#ff00fb 100%);
+    top: 0;
+    bottom: 0;
+    background: linear-gradient(#ff0044 0%, #ff00fb 100%);
     display: table;
     height: 100%;
     width: 100%;
 }
 
-.parallax-inner{
+.parallax-inner {
     display: table-cell;
     vertical-align: middle;
 }
 
-#bio{
+#bio {
     padding: 50px;
     font-size: 42px;
 }
-.line{
+
+.line {
     height: 6px;
     width: 70px;
     background-color: black;
     margin: 8px auto;
-    
+
 }
-p{
+
+p {
     max-width: 450px;
     margin: 25px auto;
     font-size: 20px;
     line-height: 1.3;
+}
+
+
+.links {
+    float: left;
+    color: fuchsia;
+    padding-top: 5px;
+    padding-left: 9px;
+    padding-right: 9px;
+    padding-bottom: 5px;
+    font-family: fantasy;
+    font-size: 20px
+}
+
+.menu {
+    list-style: none;
+    position: fixed;
+    top: 10px;
+    right: 30px;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.links:hover {
+    background-color: aqua;
+}
+
+h1 {
+    font-size: 40px;
+    font-family: sans-serif;
+    font-weight: 300;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+}
+
+.article:hover {
+    color: fuchsia;
 }
